# QuantStack

./: .gitignore
quant_trading_system/: .env  README.md  app.py  main.py  pyproject.toml
quant_trading_system/config/: instruments.yaml
quant_trading_system/data/: quant_data.db
quant_trading_system/scripts/: cli.py
quant_trading_system/src/analytics/: features.py  signals.py
quant_trading_system/src/backtest/: diagnostics.py  engine.py
quant_trading_system/src/core/: instrument.py  market_data.py
quant_trading_system/src/data/: database.py  models.py
quant_trading_system/src/data/etl/: pipeline.py
quant_trading_system/src/data/sources/: base.py  fred_source.py  stub_source.py  yfinance_source.py
quant_trading_system/src/signals/: momentum.py
quant_trading_system/src/trading/: backtest.py  backtest_helpers.py  diagnostics.py
quant_trading_system/tests/: conftest.py  test_backtest.py  test_db.py  test_features.py  test_pipeline.py  test_source.py  test_vectorized_backtest.py
