[project]
name = "quant-portfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Edwin Purcell"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.1,<3.0.0)"
]
packages = [
    { include = "core", from "src"}
    { include = "backtest", from "src" }
    { include = "signals", from "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
