[tool.poetry]
name = "quantplatform"
version = "0.1.0"
description = "Systematic trading data pipeline and backtesting platform"
authors = ["Edwin Purcell"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tabulate = ">=0.9.0"

# Data Engineering
pandas = ">=2.0.0"
numpy = ">=1.24.0"
sqlalchemy = ">=2.0.0"

# Data Sources
yfinance = ">=0.2.0"

# Utilities
pydantic = ">=2.0.0"
click = ">=8.0.0"
python-dotenv = ">=1.0.0"
matplotlib = ">=3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"
mypy = ">=1.5.0"

[tool.poetry.group.trading.dependencies]
alpaca-py = ">=0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"